# QT

./: .gitignore  .gitmodules  36-源代码.txt  DEVLOG.md  README.md  实现变更文档.md  设计文档.md
.github/workflows/: build.yml
build-mingw/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-mingw/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake  deploy_oj_5269149474.cmake
build-mingw/Testing/Temporary/: CTestCostData.txt
build-mingw/oj_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-mingw/oj_autogen/4PIRG7OLBM/: moc_aiconfigpage.cpp  moc_aiconfigpage.cpp.d  moc_classpage.cpp  moc_classpage.cpp.d  moc_contestpage.cpp  moc_contestpage.cpp.d  moc_favoritepage.cpp  moc_favoritepage.cpp.d  moc_homepage.cpp  moc_homepage.cpp.d  moc_loginpage.cpp  moc_loginpage.cpp.d  moc_problempage.cpp  moc_problempage.cpp.d  moc_reviewpage.cpp  moc_reviewpage.cpp.d  moc_settingspage.cpp  moc_settingspage.cpp.d  moc_statspage.cpp  moc_statspage.cpp.d  moc_storagepage.cpp  moc_storagepage.cpp.d  moc_taskboardpage.cpp  moc_taskboardpage.cpp.d
build-mingw/oj_autogen/4W457J4BPZ/: moc_applicationsizeservice.cpp  moc_applicationsizeservice.cpp.d
build-mingw/oj_autogen/6FTCGA2YI7/: moc_classservice.cpp  moc_classservice.cpp.d  moc_contestservice.cpp  moc_contestservice.cpp.d  moc_homeservice.cpp  moc_homeservice.cpp.d  moc_problemservice.cpp  moc_problemservice.cpp.d
build-mingw/oj_autogen/7S7G63O7NP/: moc_cacheservice.cpp  moc_cacheservice.cpp.d
build-mingw/oj_autogen/DDDAKBAMID/: moc_aiservice.cpp  moc_aiservice.cpp.d
build-mingw/oj_autogen/M5Y2OPD7BN/: moc_emailverifyservice.cpp  moc_emailverifyservice.cpp.d  moc_logincacheservice.cpp  moc_logincacheservice.cpp.d  moc_loginservice.cpp  moc_loginservice.cpp.d
build-mingw/oj_autogen/PLFQCJS4A6/: moc_problemmetaservice.cpp  moc_problemmetaservice.cpp.d
build-mingw/oj_autogen/R7RQDIYXID/: moc_classrepository.cpp  moc_classrepository.cpp.d  moc_contestrepository.cpp  moc_contestrepository.cpp.d  moc_homerepository.cpp  moc_homerepository.cpp.d  moc_problemrepository.cpp  moc_problemrepository.cpp.d  moc_resultrepository.cpp  moc_resultrepository.cpp.d  moc_submitrepository.cpp  moc_submitrepository.cpp.d
build-mingw/oj_autogen/RF4HJPLHJL/: moc_favoriteproblemservice.cpp  moc_favoriteproblemservice.cpp.d
build-mingw/oj_autogen/RX6MHUZODY/: moc_deadlinealarmservice.cpp  moc_deadlinealarmservice.cpp.d  moc_reminderservice.cpp  moc_reminderservice.cpp.d
build-mingw/oj_autogen/UFQQIFJZKK/: moc_cookiestore.cpp  moc_cookiestore.cpp.d  moc_openaiclient.cpp  moc_openaiclient.cpp.d  moc_openjudgeclient.cpp  moc_openjudgeclient.cpp.d
build-mingw/oj_autogen/YPKJ5OE7LN/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_treesittersyntaxhighlighter.cpp  moc_treesittersyntaxhighlighter.cpp.d
build-mingw/oj_autogen/ZITJ6CFJKO/: moc_resultservice.cpp  moc_resultservice.cpp.d  moc_submitservice.cpp  moc_submitservice.cpp.d
build-mingw/oj_parser_tests_autogen/: deps  moc_predefs.h
oj-client/: CMakeLists.txt  PLAN.md  app_icon.rc  appstate.toml  installer.iss  main.cpp  resources.qrc
oj-client/images/: icon-page-1.ico.bak
oj-client/src/config/: appconfig.cpp  appconfig.h  apppaths.cpp  apppaths.h
oj-client/src/network/: cookiestore.cpp  cookiestore.h  openaiclient.cpp  openaiclient.h  openjudgeclient.cpp  openjudgeclient.h
oj-client/src/parser/: classparser.cpp  classparser.h  contestparser.cpp  contestparser.h  groupparser.cpp  groupparser.h  loginparser.cpp  loginparser.h  parsercommon.cpp  parsercommon.h  problemparser.cpp  problemparser.h  resultparser.cpp  resultparser.h  submitparser.cpp  submitparser.h
oj-client/src/repository/cache/: classcacherepository.cpp  classcacherepository.h  contestcacherepository.cpp  contestcacherepository.h  homecacherepository.cpp  homecacherepository.h  problemcacherepository.cpp  problemcacherepository.h
oj-client/src/repository/favorite/: favoriteproblemrepository.cpp  favoriteproblemrepository.h
oj-client/src/repository/login/: logincacherepository.cpp  logincacherepository.h
oj-client/src/repository/meta/: problemmetarepository.cpp  problemmetarepository.h
oj-client/src/repository/submit/: classrepository.cpp  classrepository.h  contestrepository.cpp  contestrepository.h  homerepository.cpp  homerepository.h  problemrepository.cpp  problemrepository.h  resultrepository.cpp  resultrepository.h  submitrepository.cpp  submitrepository.h
oj-client/src/service/ai/: aiservice.cpp  aiservice.h
oj-client/src/service/app/: applicationsizeservice.cpp  applicationsizeservice.h
oj-client/src/service/browse/: classservice.cpp  classservice.h  contestservice.cpp  contestservice.h  homeservice.cpp  homeservice.h  problemservice.cpp  problemservice.h
oj-client/src/service/cache/: cacheservice.cpp  cacheservice.h
oj-client/src/service/favorite/: favoriteproblemservice.cpp  favoriteproblemservice.h
oj-client/src/service/login/: emailverifyservice.cpp  emailverifyservice.h  logincacheservice.cpp  logincacheservice.h  loginservice.cpp  loginservice.h
oj-client/src/service/meta/: problemmetaservice.cpp  problemmetaservice.h
oj-client/src/service/reminder/: deadlinealarmservice.cpp  deadlinealarmservice.h  reminderservice.cpp  reminderservice.h
oj-client/src/service/submit/: resultservice.cpp  resultservice.h  submitservice.cpp  submitservice.h
oj-client/src/ui/: lightmodeiconhelper.cpp  lightmodeiconhelper.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  treesittersyntaxhighlighter.cpp  treesittersyntaxhighlighter.h
oj-client/src/ui/pages/: aiconfigpage.cpp  aiconfigpage.h  classpage.cpp  classpage.h  contestpage.cpp  contestpage.h  favoritepage.cpp  favoritepage.h  homepage.cpp  homepage.h  loginpage.cpp  loginpage.h  problempage.cpp  problempage.h  reviewpage.cpp  reviewpage.h  settingspage.cpp  settingspage.h  statspage.cpp  statspage.h  storagepage.cpp  storagepage.h  taskboardpage.cpp  taskboardpage.h
oj-client/tests/: test_parsers.cpp
oj-sandbox/C++/: Dockerfile  README.md  judge_cpp.py
(+3 files in other folders)
